Fix layerlist visible in modal IE bug #577

--- a/web/css/sidebar.css
+++ b/web/css/sidebar.css
@@ -83,6 +83,13 @@
   border-color: #00457b;
   color: #fff;
 }
+
+/** IE Scrollbar hack */
+#productsHolder.layer-modal-open .simplebar-scroll-content,
+#productsHolder.layer-modal-open .simplebar-content {
+  overflow: hidden;
+}
+
 #productsHolder footer {
   padding: 5px;
   width: initial;
